--- a/src/components/WhatsAppButton.astro
+++ b/src/components/WhatsAppButton.astro
@@ -6,7 +6,7 @@ import Icon from "./Icon.astro";
   href="https://api.whatsapp.com/send?phone=51979758781"
   target="_blank"
   rel="noopener noreferrer"
-  aria-label="Chatea con nosotros por WhatsApp"
+  aria-label="Chatea por WhatsApp"
   class="fixed
     bottom-6
     right-6
