--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -8,7 +8,7 @@ import aboutMachuPicchu from "../assets/img-home-services/machupicchu.webp";
   <div class="max-w-7xl mx-auto px-6 lg:px-8">
     <div class="flex flex-col lg:flex-row gap-16 items-center">
       <!-- Columna Izquierda: Texto y Storytelling -->
-      <div class="lg:w-1/2 gsap-fade-up">
+      <div class="lg:w-1/2">
         <div
           class="inline-block px-3 py-1 bg-red-50 text-brand-red font-bold text-xs uppercase tracking-widest rounded-full mb-6"
         >
@@ -60,7 +60,7 @@ import aboutMachuPicchu from "../assets/img-home-services/machupicchu.webp";
 
       <!-- Columna Derecha: Composición de Imágenes -->
       <div
-        class="lg:w-1/2 relative h-full min-h-[300px] md:min-h-[500px] w-full gsap-fade-up delay-100 mt-12 lg:mt-0"
+        class="lg:w-1/2 relative h-full min-h-[300px] md:min-h-[500px] w-full mt-12 lg:mt-0"
       >
         <!-- Imagen Principal -->
         <div
