--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -15,7 +15,6 @@ const services = [
     description:
       "Coordinamos todos los circuitos clásicos: Cusco, Valle Sagrado, Machu Picchu y Montaña 7 Colores.",
     image: operacionTradicional,
-    delay: "",
   },
   {
     id: 2,
@@ -23,7 +22,6 @@ const services = [
     description:
       "Somos tu aliado en destino. Nos encargamos de toda la logística para que tus pasajeros viajen sin contratiempos.",
     image: serviciosReceptivos,
-    delay: "delay-75",
   },
   {
     id: 3,
@@ -31,7 +29,6 @@ const services = [
     description:
       "Unidades autorizadas, cómodas y seguras. Operadas por conductores expertos que conocen las rutas.",
     image: transporteTuristico,
-    delay: "delay-100",
   },
   {
     id: 4,
@@ -39,7 +36,6 @@ const services = [
     description:
       "Staff de guías oficiales certificados en Español e Inglés, con amplia experiencia y carisma.",
     image: guiadoProfesional,
-    delay: "delay-150",
   },
   {
     id: 5,
@@ -47,7 +43,6 @@ const services = [
     description:
       "Creamos paquetes adaptados al estilo de tu marca. Cultural, aventura, familiar o premium.",
     image: disenoMedida,
-    delay: "delay-200",
   },
   {
     id: 6,
@@ -55,7 +50,6 @@ const services = [
     description:
       "Monitoreamos cada servicio en tiempo real para asegurar puntualidad y cumplimiento.",
     image: soporteOperativo,
-    delay: "delay-300",
   },
   {
     id: 7,
@@ -63,7 +57,6 @@ const services = [
     description:
       "Atención logística especializada para grupos estudiantiles, corporativos (MICE) y familiares.",
     image: serviciosGrupales,
-    delay: "delay-300",
   },
 ];
 ---
@@ -90,9 +83,7 @@ const services = [
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
       {
         services.map((service) => (
-          <div
-            class={`bg-white rounded-2xl shadow-sm hover:shadow-md transition-all border border-gray-100 overflow-hidden group ${service.delay}`}
-          >
+          <div class="bg-white rounded-2xl shadow-sm hover:shadow-md transition-all border border-gray-100 overflow-hidden group">
             <div class="h-48 overflow-hidden">
               <Image
                 src={service.image}
