imagenes de paquetes cusco actualizados

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import aboutCusco from "../assets/img-home-services/cusco.webp";
-import aboutMachuPicchu from "../assets/img-home-services/machupicchu.webp";
+import aboutCusco from "@/assets/img-home-services/cusco.webp";
+import aboutMachuPicchu from "@/assets/img-home-services/machupicchu.webp";
 ---
 
 <section id="empresa" class="py-24 bg-white overflow-hidden">
